--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-crawler-example",
   "version": "1.0.0",
-  "description": "",
+  "description": "Web Crawling example for exercise on 'Information Retrieval' course @HSHarz",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
